# quicksov

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
config/: daemon.toml  theme_tokyonight.json
cpp/wallpaper/decoder/ffmpeg/: VideoDecoder.hpp  VideoDecoderCore.cpp  VideoDecoderDecode.cpp  VideoDecoderInternal.hpp  VideoDecoderUtils.cpp
cpp/wallpaper/renderer/: CMakeLists.txt
cpp/wallpaper/renderer/src/: GpuCompositor.cpp  GpuCompositor.hpp  OutputSurface.hpp  OutputSurfaceBuffers.cpp  OutputSurfaceCore.cpp  OutputSurfaceRender.cpp  ProtocolClient.cpp  ProtocolClient.hpp  Runtime.hpp  SnapshotModel.cpp  SnapshotModel.hpp  SourceSession.cpp  SourceSession.hpp  WallpaperContract.hpp  WallpaperContractConfig.hpp.in  WaylandRenderer.cpp  WaylandRenderer.hpp  WaylandRendererEvents.cpp  main.cpp
docs/: L0-context.md  L1-design-language.md  L2-components.md  L3-architecture.md  L3-wallpaper-engine.md  milestones.md
docs/adr/: 001-rust-tokio.md  002-uds-msgpack.md  003-actor-service.md  004-watch-broadcast.md  005-no-nm-netlink.md  006-quickshell-boundary.md  007-screen-role-bootstrap.md  008-uds-ndjson.md  009-mainbar-visual-refresh.md  010-compact-status-panels.md  011-mainbar-client-side-background-effect.md  012-docked-status-panel-host.md  013-status-dock-host-correction.md  014-mainbar-overlay-field.md  015-mainbar-shared-panel-background-field.md  016-battery-sysfs-helper.md  017-battery-popup-liquid-panel.md
init/openrc/: qsosysd
init/systemd/: qsosysd.service
native/wallpaper_ffmpeg/: CMakeLists.txt
native/wallpaper_ffmpeg/src/: WallpaperVideo.cpp  WallpaperVideo.hpp  WallpaperVideoCore.cpp  WallpaperVideoDecode.cpp  WallpaperVideoInternal.hpp  WallpaperVideoItem.cpp  WallpaperVideoItem.hpp  WallpaperVideoUtils.cpp
native/wallpaper_mpv/: CMakeLists.txt
native/wallpaper_mpv/src/: MpvCore.cpp  MpvCore.hpp  WallpaperSharedFrame.hpp  WallpaperVideo.cpp  WallpaperVideo.hpp  WallpaperVideoItem.cpp  WallpaperVideoItem.hpp
native/wallpaper_native/: CMakeLists.txt
native/wallpaper_native/proto/: wlr-layer-shell-unstable-v1.xml
native/wallpaper_native/src/: WallpaperNativeGpu.cpp  WallpaperNativeOutputSurfaceBuffers.cpp  WallpaperNativeOutputSurfaceCore.cpp  WallpaperNativeOutputSurfaceRender.cpp  WallpaperNativeProtocol.cpp  WallpaperNativeRuntime.hpp  WallpaperNativeSourceSession.cpp  WallpaperNativeTypes.cpp  WallpaperNativeWaylandRenderer.cpp  WallpaperNativeWaylandRendererEvents.cpp  libplacebo_libav_impl.c  main.cpp
protocol/: schema.json  spec.md  wallpaper-contract.json
scripts/: build-wallpaper-native.sh  build-wallpaper-plugin.sh  build-wallpaper-renderer.sh  compile-shaders.sh  dev-link.sh  install-wallpaper-plugin.sh  install.sh  ipc-bridge  qmltrace_analyze.py  run-shell.sh
shell/: DebugVisuals.qml  ScreenDelegate.qml  Theme.qml  qmldir  shell.qml  wallpaper-shell.qml
shell/bars/: AuxBar.qml  MainBar.qml
shell/components/: AnimatedValue.qml  IconButton.qml  Popup.qml  SvgIcon.qml  WeatherCurve.qml  qmldir
shell/desktop/: PowerDock.qml  WallpaperLayer.qml
shell/ipc/: Client.qml  protocol.js  qmldir
shell/overlays/: BatteryPopup.qml  BluetoothPopup.qml  ClockPopup.qml  MusicPanel.qml  NetworkPopup.qml  NotificationActionChip.qml  NotificationCard.qml  NotificationCardContent.qml  NotificationCenter.qml  NotificationToastCard.qml  NotificationToastColumn.qml  PowerMenu.qml  VolumePopup.qml
shell/panels/: DockedPanelShell.qml  MainBarExclusiveZoneWindow.qml  MainBarOverlayWindow.qml  MainBarPanelScene.qml  MainBarPopupController.qml  NotificationToastWindow.qml  PanelBackgroundField.qml  PanelContentSlot.qml  PanelGeometryModel.qml  PanelShellLayer.qml  PanelShellModel.qml  PanelShellRegion.qml  PanelShoulderFill.qml  qmldir
shell/services/: Audio.qml  Battery.qml  Bluetooth.qml  Meta.qml  Mpris.qml  Network.qml  Niri.qml  Notification.qml  NotificationUiState.qml  ThemeService.qml  Time.qml  Tray.qml  Wallpaper.qml  WallpaperSessions.qml  Weather.qml  qmldir
shell/shaders/qsb/: battery_liquid_field.frag.qsb  workspace_gooey.frag.qsb
shell/shaders/src/: battery_liquid_field.frag  workspace_gooey.frag
shell/widgets/: BatteryIndicator.qml  BluetoothIndicator.qml  Clock.qml  NetworkIndicator.qml  NotificationButton.qml  StatusDockHost.qml  TrayHost.qml  VolumeIndicator.qml  WindowInfo.qml  WorkspaceStrip.qml
src/: lib.rs  main.rs  qsosysd.rs  qsovd.rs  session_env.rs  util.rs  wallpaper_contract.rs
src/bus/: mod.rs  types.rs
src/config/: mod.rs  paths.rs  schema.rs
src/ipc/: codec.rs  mod.rs  protocol.rs  router.rs  session.rs  transport.rs
src/platform/: linux.rs  mod.rs
src/services/: mod.rs
src/services/applications/: mod.rs
src/services/audio/: mod.rs
src/services/battery/: helper_protocol.rs  mod.rs  power_profile.rs  sysfs.rs  upower.rs
src/services/bluetooth/: mod.rs
src/services/icon/: mod.rs
src/services/meta/: mod.rs
src/services/mpris/: mod.rs
src/services/network/: link.rs  mod.rs  wifi.rs
src/services/network/wifi/: client.rs  command.rs  error.rs  manual.rs  mod.rs  model.rs  probe.rs  runtime.rs  scan.rs  service.rs  snapshot.rs
src/services/niri/: app_names.rs  mod.rs
src/services/notification/: mod.rs
src/services/theme/: mod.rs
src/services/wallpaper/: actions.rs  config.rs  mod.rs  model.rs  renderer.rs  scan.rs
src/services/weather/: mod.rs  policy.rs
systemd/: qsosysd.service  qsosysd.socket
tests/: _qsov_testlib.py  test_audio.py  test_battery.py  test_bluetooth.py  test_icon.py  test_meta.py  test_mpris.py  test_net_link.py  test_net_wifi.py  test_niri.py  test_niri_focus_stress.py  test_niri_windows_info.py  test_notification.py  test_qmltrace_analyze.py  test_theme.py  test_wallpaper.py  test_weather.py
