[package]
name = "quicksov"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qsovd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
nix = { version = "0.29", features = ["signal", "process", "user"] }
dirs = "5"
zbus = { version = "5", features = ["tokio"] }
rtnetlink = "0.20"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
pipewire = "0.9"
futures = "0.3"
