[package]
name = "quicksov"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qsovd"
path = "src/main.rs"

[[bin]]
name = "qsosysd"
path = "src/bin/qsosysd.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
nix = { version = "0.31", features = ["signal", "process", "user"] }
dirs = "6"
zbus = { version = "5", features = ["tokio"] }
rtnetlink = "0.21"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
pipewire = "0.9"
futures = "0.3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
